# project-euler

./: README.md
ada/: README.md
ada/src/: problem001.adb  problem002.adb  problem004.adb  problem005.adb  template.adb
c/: Makefile  README.md
c/src/: problem-001.c  problem-002.c  problem-003.c  (+11 more)
clojure/: README.md  project.clj
haskell/: README.md  project-euler.cabal
python/: README.md  problem-001.py  problem-002.py  problem-003.py  problem-004.py  problem-005.py  problem-006.py  problem-007.py  problem-008.py  problem-009.py  problem-010.py  problem-011.py  problem-012.py  problem-013.py  problem-014.py  problem-015.py  problem-016.py  problem-017.py  problem-018.py  problem-019.py  problem-020.py  problem-021.py  problem-022.py  problem-023.py  problem-024.py  problem-025.py  problem-026.py  problem-027.py  problem-028.py  problem-029.py  problem-030.py  problem-031.py  problem-032.py  problem-033.py  problem-034.py  problem-035.py  problem-036.py  problem-037.py  problem-038.py  problem-039.py  (+2 more)
rust/: Cargo.toml  README.md
rust/problem-1/: Cargo.toml
rust/problem-10/: Cargo.toml
rust/problem-2/: Cargo.toml
rust/problem-3/: Cargo.toml
rust/problem-3/src/: .main.rs.swp
rust/problem-4/: Cargo.toml
rust/problem-4/src/: main.rs
rust/problem-5/: Cargo.toml
rust/problem-5/src/: main.rs
rust/problem-6/: Cargo.toml
rust/problem-6/src/: main.rs
rust/problem-7/: Cargo.toml
rust/problem-8/: Cargo.toml
rust/problem-8/src/: .main.rs.swp  main.rs
rust/problem-9/: Cargo.toml
rust/problem-9/src/: .main.rs.swp
rust/src/: bigint.rs  lib.rs
(+22 files in other folders)
